wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-deployment
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      name: wp-pod
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress-container
        image: wordpress
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  #type: NodePort
  selector:
    app: wordpress
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
    #nodePort: 30080
